<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="brvah_app_name">Library</string>
    <string name="brvah_loading">正在加载中...</string>
    <string name="brvah_load_failed">加载失败，请点我重试</string>
    <string name="brvah_load_end">没有更多数据</string>
    <string name="system_operation_success_message">操作成功！</string>
    <string name="system_operation_error_message">操作失败！</string>
    <string name="system_load_message">正在获取数据，请稍候...</string>
    <string name="system_upload_message">正在上传，请稍候...</string>
    <string name="system_commit_message">正在提交数据，请稍候...</string>
    <string name="system_auto_message">正在自动登录，请稍候...</string>
    <string name="system_request_error_message">请求数据失败！</string>
    <string name="system_net_error_message">网络不给力，请稍后再试！</string>
    <string name="system_commit_error_message">提交数据失败！</string>
    <string name="system_data_error_message">请求数据失败，连接超时！</string>
    <string name="system_login_error_message">验证用户信息失败</string>
    <string name="system_login_net_error_message">验证用户信息失败，连接超时！</string>
    <string name="system_dialog_confirm">确定</string>
    <string name="system_exit_prompt">友情提示</string>
    <string name="system_exit_message">退出当前账号需重新登录，您确定退出系统</string>
    <string name="app_name">i鹰潭</string>
    <string name="text_tab_home">办事</string>
    <string name="text_tab_service">便民服务</string>
    <string name="text_tab_mine">我的</string>
    <string name="text_tab_personal">个人中心</string>
    <string name="text_account">账号与安全</string>
    <string name="text_notification">通知与消息</string>
    <string name="text_privacy">隐私</string>
    <string name="text_general">通用</string>
    <string name="text_about">关于去哪考</string>
    <string name="button_backward">返回</string>
    <string name="button_submit">提交</string>
    <string name="text_age">年龄</string>
    <string name="text_gender">性别</string>
    <string name="text_username">用户名</string>
    <string name="text_nickname">昵称</string>
    <string name="text_place">地区</string>
    <string name="text_learning">我想学/考</string>
    <string name="text_education">学历层次</string>
    <string name="text_speciality">专业</string>
    <string name="text_credit">我的积分</string>
    <string name="text_official_website">官方网站</string>
    <string name="text_rate_app">去评分</string>
    <string name="text_about_help">帮助</string>
    <string name="text_about_feedback">反馈</string>
    <string name="text_about_update">检查更新</string>
    <string name="text_company">去哪考 版权所有 由武汉快点科技提供技术支持</string>
    <string name="text_copyright">Copyright &#169; 2014-2020 Shizhenbao All Rights Reserved.</string>
    <string name="text_exit">退&#160;出</string>
    <string name="tab_home">home</string>
    <string name="tab_service">service</string>
    <string name="tab_mine">mine</string>
    <string name="tab_personal">personal</string>
    <string name="tab_third">third</string>
    <string name="pull_no_more_msg">没有更多数据了</string>
    <string name="pull_pull_up_text">松开加载更多</string>
    <string name="pull_down_text">下拉可以刷新</string>
    <string name="pull_release_text">松开获取更多</string>
    <string name="pull_down_update_time">最后更新时间 : </string>
    <string name="pull_load_more_ongoing_text">正在加载...</string>
    <string name="pull_click_load_more_text">点击加载更多</string>
    <string name="gsys_xsearch_loading">正在加载中…</string>
    <string name="document_detail_empty">没有找到数据</string>
    <string name="pull_to_refresh_header_hint_normal">@string/pull_down_text</string>
    <string name="pull_to_refresh_header_hint_normal2">上拉可以刷新</string>
    <string name="pull_to_refresh_header_hint_ready">已经到底啦</string>
    <string name="pull_to_refresh_header_hint_loading">@string/pull_load_more_ongoing_text</string>
    <string name="pull_to_refresh_header_last_time">@string/pull_down_update_time</string>
    <string name="pull_to_refresh_footer_hint_ready">松开载入更多</string>
    <string name="pull_to_refresh_refreshing_label">@string/pull_to_refresh_header_hint_loading</string>
    <string name="pull_to_refresh_no_more_data">@string/pull_no_more_msg</string>
    <string name="pull_to_refresh_network_error">网络不给力，请检查网络</string>
    <string name="alert_dialog_exit_title">您的账号在其它地方已登录，请重新登录！</string>
    <string name="alert_dialog_title">下一环节列表为空，不能执行操作</string>
    <string name="welconme_world">广通软件技术支持@2017</string>
    <string name="person_login">个人用户</string>
    <string name="company_login">法人用户</string>
    <string name="passwd_login">密码登录</string>
    <string name="eid_login">eID登录</string>
    <string name="login_name_hint">请输入用户名、身份证号</string>
    <string name="login_name_hint_1">请输入手机号</string>
    <string name="login_psw_hint">请输入密码</string>
    <string name="forget_psw">忘记密码？</string>
    <string name="login">登录</string>
    <string name="register">还没有账号，立即注册</string>
    <string name="home_onLine_booking">网上预约</string>
    <string name="home_my_work">我要办事</string>
    <string name="home_consulting">咨询投诉</string>
    <string name="home_policy_statute">政策法规</string>
    <string name="home_sunshine_affair">阳光政务</string>
    <string name="home_affair_news">政务要闻</string>
    <string name="home_capacity_search">我要搜索</string>
    <string name="home_interaction_exchange">互动交流</string>
    <string name="home_affair_work">政务办事</string>
    <string name="home_my_site">我的地盘</string>
    <string name="system_no_data">暂无数据</string>
    <string name="social_security1">个人基本信息</string>
    <string name="social_security2">养老缴费查询 </string>
    <string name="social_security3">医疗缴费查询</string>
    <string name="social_security4">失业缴费查询 </string>
    <string name="social_security5">工伤缴费记录</string>
    <string name="social_security6">生育缴费记录 </string>
    <string name="social_security7">异地就医备案查询</string>
    <string name="social_security8">参保缴费证明 </string>
    <string name="social_security9">养老金收入证明</string>
    <string name="online_booking_title">温馨提醒</string>
    <string name="online_booking_num1">1.</string>
    <string name="online_booking_num2">2.</string>
    <string name="online_booking_num3">3.</string>
    <string name="online_booking_text1">您办理的业务需要前往鹰潭市大厅现场受理，请点击“下一步”进入预约，预约受理时间和受理大厅。</string>
    <string name="online_booking_text2">预约成功后后，请使用预约编号或身份证号查询预约信息，并打印申请表格，按照所选时间前往大厅现场办理业务。</string>
    <string name="online_booking_text3">如需取消预约，可使用预约编号或身份证号查询后取消预约申请。</string>
    <string name="online_booking_next">下一步</string>
    <string name="online_booking_last">上一步</string>
    <string name="online_booking_confirm">确认预约</string>
    <string name="online_Booking_infoVerify_title">请核对个人信息确保预约办事一路顺畅</string>
    <string name="online_Booking_infoVerify_phone">手机号码:</string>
    <string name="online_Booking_infoVerify_email">电子邮箱:</string>
    <string name="online_Booking_infoVerify_veeify">获取验证码</string>
    <string name="online_Booking_infoVerify_veeify_hint">验证码</string>
    <string name="online_Booking_infoVerify_name">姓名:</string>
    <string name="online_Booking_infoVerify_id">身份证:</string>
    <string name="online_Booking_hall_title">*该业务需预约后前往现场办理</string>
    <string name="online_Booking_hall_dep">预约部门:</string>
    <string name="online_Booking_hall_hall">预约事项:</string>
    <string name="online_Booking_hall_date">预约日期:</string>
    <string name="online_Booking_hall_date_hint">选择日期</string>
    <string name="online_Booking_hall_select_title">时间段:</string>
    <string name="online_Booking_hall_confirm">确定</string>
    <string name="family_register_detail_item_name">项目名称:</string>
    <string name="family_register_detail_work_object">受理范围:</string>
    <string name="family_register_detail_actualize_department">办理机关:</string>
    <string name="family_register_detail_transact_time_limit">办理时限:</string>
    <string name="family_register_detail_fee_scale">收费标准:</string>
    <string name="family_register_detail_degree">到办事窗口次数:</string>
    <string name="family_register_detail_refer_phone">咨询电话:</string>
    <string name="family_register_detail_monitor_phone">监督投诉电话:</string>
    <string name="family_register_detail_transact_place">办理时间、地点:</string>
    <string name="accept_condition">受理条件</string>
    <string name="transact_materials">办理材料</string>
    <string name="charge_condition">收费情况</string>
    <string name="setting_gist">设定依据</string>
    <string name="family_register_detail_online_declare">在线申办</string>
    <string name="online_booking">在线预约</string>
    <string name="search">查询</string>
    <string name="online_handling">网上办理</string>
    <string name="family_register_detail_consult">咨询</string>
    <string name="family_register_detail_route">路线</string>
    <string name="family_register_detail_collect">收藏</string>
    <string name="online_declare_project_name">项目名称</string>
    <string name="online_declare_unit_name">单位名称</string>
    <string name="online_declare_legal_representative">代&#160;&#160;表&#160;&#160;人</string>
    <string name="online_declare_credit_code">信用代码</string>
    <string name="online_declare_hint_must">（必填）</string>
    <string name="online_declare_name">姓&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;名</string>
    <string name="online_declare_id">身&#160;&#160;份&#160;&#160;证</string>
    <string name="online_declare_contact">联&#160;&#160;系&#160;&#160;人</string>
    <string name="online_declare_phone">手机号码</string>
    <string name="online_declare_id_number">证件号码</string>
    <string name="online_declare_address">通讯地址</string>
    <string name="online_declare_way">取件方式</string>
    <string name="online_declare_email">电子邮箱</string>
    <string name="online_declare_mail">邮&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;编</string>
    <string name="online_declare_email_address">邮寄地址</string>
    <string name="online_declare_add_address">添加地址</string>
    <string name="online_declare_heading">建议用地规划许可</string>
    <string name="online_declare_commit">提交</string>
    <string name="consulting_iwant_suggestion">我要建议</string>
    <string name="consulting_iwant_consulting">我要咨询</string>
    <string name="consulting_lead_mail">领导信箱</string>
    <string name="consulting_iwant_complaint">我要投诉</string>
    <string name="consulting_iwant_declare">我要举报</string>
    <string name="consulting_iwant_evaluate">我要评价</string>
    <string name="consulting_iwant_query">办件查询</string>
    <string name="consulting_iwant_history_mail">历史信件</string>
    <string name="consulting_name">我的姓名</string>
    <string name="consulting_telephone">联系电话</string>
    <string name="consulting_phone">手机号码</string>
    <string name="consulting_short_msg">短信通知</string>
    <string name="consulting_mail">邮件通知</string>
    <string name="consulting_email">电子邮箱</string>
    <string name="consulting_postal_code">邮政编码</string>
    <string name="consulting_address">联系地址</string>
    <string name="consulting_dep">建议单位</string>
    <string name="consulting_title">标&#8197;&#8197;&#8197;&#8197;&#8197;&#8197;&#8197;&#8197;题</string>
    <string name="consulting_place">所&#8197;&#8197;属&#8197;&#8197;地</string>
    <string name="consulting_open">是否公开</string>
    <string name="consulting_open_yes">是</string>
    <string name="mobile_phone_number">手机号码</string>
    <string name="user_name">用户名</string>
    <string name="material_name">材料名称</string>
    <string name="material_piece">材料份数</string>
    <string name="material_original_copy">是否必备</string>
    <string name="material_electrical_parts">材料形式</string>
    <string name="material_paper">纸质件</string>
    <string name="company_name">企业名称</string>
    <string name="company_linkman">企业联系人</string>
    <string name="password">密码</string>
    <string name="password_again">重复密码</string>
    <string name="company_user_register">企业用户注册</string>
    <string name="user_register">个人用户注册</string>
    <string name="go_to_login">已有账号，去登陆</string>
    <string name="protocols">我已阅读并同意《智慧城市注册协议》</string>
    <string name="enterprise_name">企业名称：</string>
    <string name="accuse_reason">检举原因：</string>
    <string name="publicity_information">公示信息：</string>
    <string name="publicity_date">公示日期：</string>
</resources>