<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:padding="10px">

        <LinearLayout
            android:id="@+id/ll_head"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gray_system_bg"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:background="@drawable/table_item_bg"
                android:gravity="center"
                android:text="@string/material_name"
                android:textColor="#0e0e0e"
                android:textSize="40px"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/table_item_bg"
                android:gravity="center"
                android:text="@string/material_piece"
                android:textColor="#0e0e0e"
                android:textSize="40px"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/table_item_bg"
                android:gravity="center"
                android:text="@string/material_original_copy"
                android:textColor="#0e0e0e"
                android:textSize="40px"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/table_item_bg"
                android:gravity="center"
                android:text="@string/material_electrical_parts"
                android:textColor="#0e0e0e"
                android:textSize="40px"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/table_item_bg"
                android:gravity="center"
                android:text="@string/material_paper"
                android:textColor="#0e0e0e"
                android:textSize="40px"
                android:textStyle="bold" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.powerrich.office.oa.view.NoScrollListView
                android:id="@+id/lv_materials_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@null" />

            <TextView
                android:id="@+id/tv_no_data"
                style="@style/layout_wrap"
                android:layout_centerInParent="true"
                android:drawableTop="@drawable/ic_no_data"
                android:gravity="center"
                android:padding="@dimen/dp10"
                android:text="@string/system_no_data"
                android:textColor="@color/text_color_8b8b8b"
                android:textSize="@dimen/ts18"
                android:visibility="gone" />
        </RelativeLayout>

    </LinearLayout>


</ScrollView>