<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/layout_title"
        layout="@layout/common_title_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_title"
        android:layout_marginLeft="@dimen/dp10"
        android:layout_marginRight="@dimen/dp10"
        android:layout_marginTop="@dimen/dp10"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/normal_item_text"
                android:gravity="center"
                android:text="@string/enterprise_name" />

            <TextView
                android:id="@+id/tv_enterprise_name"
                style="@style/normal_item_name"
                android:text="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_10"
            android:orientation="horizontal">

            <TextView
                style="@style/normal_item_text"
                android:gravity="center"
                android:text="@string/accuse_reason" />

            <TextView
                android:id="@+id/tv_accuse_reason"
                style="@style/normal_item_name"
                android:text="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_10"
            android:orientation="horizontal">

            <TextView
                style="@style/normal_item_text"
                android:gravity="center"
                android:text="@string/publicity_information" />

            <TextView
                android:id="@+id/tv_publicity_information"
                style="@style/normal_item_name"
                android:text="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_10"
            android:orientation="horizontal">

            <TextView
                style="@style/normal_item_text"
                android:gravity="center"
                android:text="@string/publicity_date" />

            <TextView
                android:id="@+id/tv_publicity_date"
                style="@style/normal_item_name"
                android:text="" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>